--- a/google-cloud-network/docker-compose-cli-pc2.yaml
+++ b/google-cloud-network/docker-compose-cli-pc2.yaml
@@ -96,7 +96,7 @@ services:
           condition: on-failure
       placement:
         constraints:
-          - node.hostname == $(hostname)
+          - node.hostname == hostname
   
 
   networks:
