--- a/google-cloud-network/docker-compose-cli-pc1.yaml
+++ b/google-cloud-network/docker-compose-cli-pc1.yaml
@@ -79,13 +79,14 @@ services:
 
   
   deploy:
-      mode: replicated
-      replicas: 1
-      restart_policy:
-          condition: on-failure
-      placement:
-        constraints:
-          - node.hostname == hostname
+        replicas: 1
+        # restart_policy:
+        #   condition: on-failure
+        #   delay: 5s
+        #   max_attempts: 3
+        placement:
+          constraints:
+            - node.hostname == hostname
   
 
   # networks:
