--- a/google-cloud-network/docker-compose-ca-pc2.yaml
+++ b/google-cloud-network/docker-compose-ca-pc2.yaml
@@ -7,6 +7,9 @@ version: '2'
 
 networks:
   health_network:
+    external:
+      name: health_network
+
 
 services:
   ca.hprovider.healthcare.com:
