--- a/google-cloud-network/docker-compose-cli-pc2.yaml
+++ b/google-cloud-network/docker-compose-cli-pc2.yaml
@@ -25,6 +25,15 @@ services:
       service: peer1.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
 
 #---------------------------------- New Peers -------------------------------
   
@@ -35,6 +44,15 @@ services:
       service: peer2.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
 
   peer3.hprovider.healthcare.com:
     container_name: peer3.hprovider.healthcare.com
@@ -43,6 +61,15 @@ services:
       service: peer3.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
   
   peer4.hprovider.healthcare.com:
     container_name: peer4.hprovider.healthcare.com
@@ -51,6 +78,15 @@ services:
       service: peer4.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
 
 
   cli:
@@ -89,20 +125,20 @@ services:
       - health_network
 
   
-  deploy:
-      mode: replicated
-      replicas: 1
-      restart_policy:
-          condition: on-failure
-      placement:
-        constraints:
-          - node.hostname == hostname
+  # deploy:
+  #     mode: replicated
+  #     replicas: 1
+  #     restart_policy:
+  #         condition: on-failure
+  #     placement:
+  #       constraints:
+  #         - node.hostname == hostname
   
 
-  networks:
-      health_network:
-        aliases:
-          - peer1.hprovider.healthcare.com
-          - peer2.hprovider.healthcare.com
-          - peer3.hprovider.healthcare.com
-          - peer4.hprovider.healthcare.com
+  # networks:
+  #     health_network:
+  #       aliases:
+  #         - peer1.hprovider.healthcare.com
+  #         - peer2.hprovider.healthcare.com
+  #         - peer3.hprovider.healthcare.com
+  #         - peer4.hprovider.healthcare.com
