--- a/google-cloud-network/docker-compose-couch-pc2.yaml
+++ b/google-cloud-network/docker-compose-couch-pc2.yaml
@@ -19,6 +19,15 @@ services:
       - COUCHDB_PASSWORD=wines
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
     # for healthcare map it to utilize Fauxton User Interface in dev environments.
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
     ports:
       - "6984:5984"
     networks:
@@ -49,6 +58,15 @@ services:
       - COUCHDB_PASSWORD=wines
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
     # for healthcare map it to utilize Fauxton User Interface in dev environments.
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
     ports:
       - "9984:5984"
     networks:
@@ -76,6 +94,15 @@ services:
       - COUCHDB_PASSWORD=wines
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
     # for healthcare map it to utilize Fauxton User Interface in dev environments.
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
     ports:
       - "10984:5984"
     networks:
@@ -103,6 +130,15 @@ services:
       - COUCHDB_PASSWORD=wines
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
     # for healthcare map it to utilize Fauxton User Interface in dev environments.
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+      placement:
+        constraints:
+          - node.hostname == hostname
     ports:
       - "11984:5984"
     networks:
