--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -28,3 +28,7 @@ services:
     container_name: ca.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+       replicas: 1
+       placement:
+          constraints: [node.role == manager]
