--- a/google-cloud-network/docker-compose-cli-pc1.yaml
+++ b/google-cloud-network/docker-compose-cli-pc1.yaml
@@ -23,6 +23,10 @@ services:
     container_name: orderer.healthcare.com
     networks:
       - health_network
+    deploy:
+       replicas: 1
+       placement:
+          constraints: [node.role == manager]
 
   
   peer0.hprovider.healthcare.com:
@@ -32,6 +36,10 @@ services:
       service: peer0.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+       replicas: 1
+       placement:
+          constraints: [node.role == manager]
 
 
   cli:
@@ -66,6 +74,10 @@ services:
       - peer0.hprovider.healthcare.com
     networks:
       - health_network
+    deploy:
+       replicas: 1
+       placement:
+          constraints: [node.role == manager]
 
   
   # deploy:
