--- a/google-cloud-network/docker-compose-cli-pc4.yaml
+++ b/google-cloud-network/docker-compose-cli-pc4.yaml
@@ -8,46 +8,13 @@ version: '2'
 volumes:
   peer1.research.healthcare.com:
   peer2.research.healthcare.com:
-  peer3.research.healthcare.com:
-  peer4.research.healthcare.com:    
 
 networks:
   health_network:
+    external:
+      name: health_network
 
 services:
-
-  orderer.healthcare.com:
-    extends:
-      file:   base/docker-compose-base.yaml
-      service: orderer.healthcare.com
-    container_name: orderer.healthcare.com
-    networks:
-      - health_network
-
-  peer0.hprovider.healthcare.com:
-    container_name: peer0.hprovider.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer0.hprovider.healthcare.com
-    networks:
-      - health_network
-
-  peer1.hprovider.healthcare.com:
-    container_name: peer1.hprovider.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer1.hprovider.healthcare.com
-    networks:
-      - health_network
-
-  peer0.research.healthcare.com:
-    container_name: peer0.research.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer0.research.healthcare.com
-    networks:
-      - health_network
-
   peer1.research.healthcare.com:
     container_name: peer1.research.healthcare.com
     extends:
@@ -57,31 +24,6 @@ services:
       - health_network
 
 #---------------------------------- New Peers -------------------------------
-  
-  peer2.hprovider.healthcare.com:
-    container_name: peer2.hprovider.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer2.hprovider.healthcare.com
-    networks:
-      - health_network
-
-  peer3.hprovider.healthcare.com:
-    container_name: peer3.hprovider.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer3.hprovider.healthcare.com
-    networks:
-      - health_network
-  
-  peer4.hprovider.healthcare.com:
-    container_name: peer4.hprovider.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer4.hprovider.healthcare.com
-    networks:
-      - health_network
-
   peer2.research.healthcare.com:
     container_name: peer2.research.healthcare.com
     extends:
@@ -89,23 +31,6 @@ services:
       service: peer2.research.healthcare.com
     networks:
       - health_network
-
-  peer3.research.healthcare.com:
-    container_name: peer3.research.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer3.research.healthcare.com
-    networks:
-      - health_network
-
-  peer4.research.healthcare.com:
-    container_name: peer4.research.healthcare.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer4.research.healthcare.com
-    networks:
-      - health_network
-
 
   cli:
     container_name: cli
@@ -135,16 +60,7 @@ services:
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     depends_on:
-      - orderer.healthcare.com
-      - peer0.hprovider.healthcare.com
-      - peer1.hprovider.healthcare.com
-      - peer2.hprovider.healthcare.com
-      - peer3.hprovider.healthcare.com
-      - peer4.hprovider.healthcare.com
-      - peer0.research.healthcare.com
       - peer1.research.healthcare.com
       - peer2.research.healthcare.com
-      - peer3.research.healthcare.com
-      - peer4.research.healthcare.com
     networks:
       - health_network
