--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -5,10 +5,10 @@
 
 version: '3'
 
+
 networks:
   health_network:
-    external:
-      name: health_network
+    external: true
 
 services:
   ca.hprovider.healthcare.com:
