--- a/google-cloud-network/docker-compose-couch-pc1.yaml
+++ b/google-cloud-network/docker-compose-couch-pc1.yaml
@@ -7,6 +7,7 @@ version: '3'
 
 networks:
   health_network:
+    external: true
 
 services:
   couchdb0:
@@ -22,7 +23,9 @@ services:
     ports:
       - "5984:5984"
     networks:
-      - health_network
+      health_network:
+        aliases:
+          - couchdb0
 
   peer0.hprovider.healthcare.com:
     environment:
