--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -29,7 +29,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.hostname == ${hostname}
+          - node.hostname == hyperledger-node1
     networks:
       health_network:
         aliases:
