change network name

--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -7,7 +7,7 @@ version: '3'
 
 
 networks:
-  health_network:
+  health-network:
     external: true
 
 services:
@@ -31,6 +31,6 @@ services:
         constraints:
           - node.hostname == hyperledger-node1
     networks:
-      health_network:
+      health-network:
         aliases:
           - ca.hprovider.healthcare.com
