--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -9,11 +9,11 @@ version: '3'
 networks:
   health_network:
     external: true
-    driver: overlay
 
 services:
   ca.hprovider.healthcare.com:
     image: hyperledger/fabric-ca:$IMAGE_TAG
+    hostname: ca.hprovider.healthcare.com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca.hprovider.healthcare.com
