add name composer network

--- a/google-cloud-network/docker-compose-ca-pc1.yaml
+++ b/google-cloud-network/docker-compose-ca-pc1.yaml
@@ -8,7 +8,8 @@ version: '3'
 
 networks:
   health_network:
-    external: true
+    external:
+      name: health_network
 
 services:
   ca.hprovider.healthcare.com:
